RESOLVED FIXED13013
REGRESSION: Selection box does not scroll to where the focus jumps when pressing an alphanumeric key
https://bugs.webkit.org/show_bug.cgi?id=13013
Summary REGRESSION: Selection box does not scroll to where the focus jumps when press...
Alexander Kempgen
Reported 2007-03-08 05:55:59 PST
when pressing an alpha numeric key in a selection box, the focus jumps to the first entry with that character, but the the box doesnt scroll there to show the new focus.
Attachments
Test case (223 bytes, text/html)
2007-03-08 07:35 PST, David Kilzer (:ddkilzer)
no flags
Patch, including change log and regression test (4.86 KB, patch)
2007-03-10 05:04 PST, mitz
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2007-03-08 07:24:58 PST
Confirmed with a local debug build of WebKit r20057 with Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8N1037).
David Kilzer (:ddkilzer)
Comment 2 2007-03-08 07:30:40 PST
This is not a regression as shipping Safari doesn't support typing a character to select an item, but it appears that it should work and should be fixed before the next release (hence NeedsRadar). Note that if you tab to the select list, typing the first character WILL scroll to the item, so the mouse click is probably not setting some variable properly.
David Kilzer (:ddkilzer)
Comment 3 2007-03-08 07:35:15 PST
Created attachment 13544 [details] Test case Steps to reproduce: 1. Open Safari/WebKit. 2. Open a page with a multiple <select> element. 3. Click on any visible item in the select list with the mouse. 4. Type the first character of a non-visible item in the select list. Use "f" or "g" for this example. Expected results: The select list should scroll to the newly selected item and the item should be the only one selected in the list. Actual results: The select list DOES NOT scroll to the newly selected item, but the item IS the only one selected in the list. Regression: This is not a regression from shipping Safari 2.0.4 (419.3) since it didn't support typing a character to select an item. Notes: - Tabbing to the select box, then typing "f" or "g" works the first time. - Tabbing to the select box, then typing "g", waiting 3 seconds, then typing "a" DOES NOT work (the select list does not scroll up to "a").
mitz
Comment 4 2007-03-08 08:20:32 PST
This is a regression from r18999. Probably a result of <http://trac.webkit.org/projects/webkit/changeset/19008>.
David Kilzer (:ddkilzer)
Comment 5 2007-03-08 11:47:41 PST
Per Comment #4, this is a regression from an earlier ToT WebKit revision.
mitz
Comment 6 2007-03-10 05:04:42 PST
Created attachment 13576 [details] Patch, including change log and regression test
Darin Adler
Comment 7 2007-03-10 07:17:09 PST
Comment on attachment 13576 [details] Patch, including change log and regression test r=me
David Kilzer (:ddkilzer)
Comment 8 2007-03-10 15:00:48 PST
Committed revision 20099.
Note You need to log in before you can comment on or make changes to this bug.